# mcda

./: .gitignore  README.md  TEST_SCENARIO.md  pyproject.toml
docs/: office_lease_lambda_sweep.json  office_lease_outranking_graph.mmd  office_lease_result.json  office_lease_weighted_sum_result.json  vendor_selection_outranking_graph.mmd  vendor_selection_result.json
examples/: office_lease_demo.py  vendor_selection_demo.py
mcda/: cli.py
mcda/commands/: alt.py  analyze.py  common.py  crit.py  info.py  init.py  participant.py  perf.py  policy.py  session.py  thresholds.py  weights.py
mcda/core/: aggregate.py  criteria.py  electre3.py  errors.py  ids.py  project.py  ranking.py  store.py  weighted_sum.py
tests/: test_vertical_slice.py
