[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcda"
version = "0.1.0"
description = "JSON-first MCDA CLI with ELECTRE III analysis"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "rich",
  "typer",
]

[project.scripts]
mcda = "mcda.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
